Fixed collapsing animation by adding height.

--- a/src/app/components/button/language.scss
+++ b/src/app/components/button/language.scss
@@ -45,6 +45,7 @@
   right: 0.5vmin;
   padding-top: 5vmin;
   border-radius: 3vmin;
+  height: max-content;
   overflow: hidden;
   .entry {
     cursor: pointer;
